--- a/selfdrive/car/torque_data/override.toml
+++ b/selfdrive/car/torque_data/override.toml
@@ -75,3 +75,4 @@ legend = ["LAT_ACCEL_FACTOR", "MAX_LAT_ACCEL_MEASURED", "FRICTION"]
 # Manually checked
 "HONDA CIVIC 2022" = [2.5, 1.2, 0.15]
 "HONDA HR-V 2023" = [2.5, 1.2, 0.2]
+"WULING ALMAZ RS PRO 2022" = [2.2, 2.3, 0.13]
