add alvez fingerprint

--- a/selfdrive/car/torque_data/override.yaml
+++ b/selfdrive/car/torque_data/override.yaml
@@ -51,3 +51,4 @@ mock: [10.0, 10, 0.0]
 # Manually checked
 HONDA CIVIC 2022: [2.5, 1.2, 0.15]
 WULING ALMAZ RS PRO 2022: [2.0, 2.0, 0.05]
+WULING ALVEZ: [2.0, 2.0, 0.05]
